tests/samples/expression-invalid-6/template.blate
// error: ,
        {(na9me_.a().pm["[]"][mop]["mop'op"].mm(4.258,'oplm', 52*mmo).tty + 9  + (mmo[lm])),9}
